suite de l'amelioration du code